add swagger for some api
