# module/item/model/item.go
@@ -12,11 +12,11 @@ var (
 )
 
 type TodoItem struct {
-	Id        int        `json:"id" gorm:"column:id"`
+	Id        int        `json:"id" gorm:"column:id" swaggerignore:"true"`
 	Title     string     `json:"title" gorm:"column:title"`
 	Status    string     `json:"status" gorm:"column:status"`
-	CreatedAt *time.Time `json:"created_at" gorm:"column:created_at;"`
-	UpdatedAt *time.Time `json:"updated_at" gorm:"column:updated_at;"`
+	CreatedAt *time.Time `json:"created_at" gorm:"column:created_at;" swaggerignore:"true"`
+	UpdatedAt *time.Time `json:"updated_at" gorm:"column:updated_at;" swaggerignore:"true"`
 }
 
 func (TodoItem) TableName() string { return "todo_items" }
